--- a/client-app/package.json
+++ b/client-app/package.json
@@ -8,13 +8,14 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/uuid": "^3.4.5",
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
+    "react-toastify": "^7.0.3",
     "semantic-ui-react": "^0.87.3",
     "typescript": "3.5.3",
     "uuid": "^3.3.2"
